--- a/04_history_and_persistence/pubspec.yaml
+++ b/04_history_and_persistence/pubspec.yaml
@@ -14,7 +14,12 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^2.0.0
-
+  path: 1.8.2
+  provider: 6.0.5
+  sqflite: 2.2.6
+  path_provider: 2.0.14
+  intl: 0.18.1
+  math_expressions: 2.4.0
 
 # The following section is specific to Flutter packages.
 flutter:
