--- a/06_firestore_support/pubspec.yaml
+++ b/06_firestore_support/pubspec.yaml
@@ -9,17 +9,20 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  provider: 6.0.5
+  sqflite: 2.2.6
+  path: 1.8.2
+  path_provider: 2.0.14
+#  intl: 0.18.1
+  math_expressions: 2.4.0
+  firebase_core: ^2.9.0
+  firebase_auth: ^4.4.0
+  cloud_firestore: ^4.5.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^2.0.0
-  path: 1.8.2
-  provider: 6.0.5
-  sqflite: 2.2.6
-  path_provider: 2.0.14
-  intl: 0.18.1
-  math_expressions: 2.4.0
 
 # The following section is specific to Flutter packages.
 flutter:
